<resources>
    <string name="app_name">SOStainable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailTitle">Kegiatan Bersih Lingkungan Jakarta…</string>
    <string name="detailDescImage">Description Image</string>
    <string name="detailDate">Date</string>
    <string name="detailDateEvent">18 May 2024</string>
    <string name="detailLocationEvent">Jl. Banowati Timur Rt 03 Rw 14 Gang Markisa no 03, Semarang Tengah</string>
    <string name="detailDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit</string>
    <string name="detailLocation">Location</string>
    <string name="donateTitle">Donate</string>
    <string name="detailButtonJoinVolunteer">Join Volunteer</string>
    <string name="detailButtonDonate">Donate $</string>
    <string name="google_logo_description">Google Icon</string>
    <string name="loginSignIn">Sign In</string>
    <string name="loginTitleWelcome">Welcome back to SOStainable</string>
    <string name="hintEmailorUsername">Email or username</string>
    <string name="hintPassword">Password</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification">Notification</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="dana">Dana</string>
    <string name="kegiatan_bersih_lingkungan_jakarta">Kegiatan Bersih Lingkungan Jakarta…</string>
    <string name="card_description_image">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna dolor sit amet, consectetur adipiscing elit, dolor sit amet…</string>
    <string name="name">Nama</string>
    <string name="bang_jefri_nichole">Bang Jefri Nichole</string>
    <string name="bangjef_bangkitacademy_id">bangjef@bangkitacademy.id</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nomor_telepon">No. Telp</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Log Out</string>
    <string name="how_much_wanna_donate">How much wanna donate?</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="include_location">Current location</string>
    <string name="location">Location</string>
    <string name="upload">Upload</string>
    <string name="validation_message">Please fill out the text boxes correctly</string>
    <string name="validasi_name">^[a-zA-Z\\s]+$</string>
    <string name="account_registered">Account has already been used</string>
    <string name="retry">Retry</string>
    <string name="fail_get_account">Failed to retrieve user account data</string>
    <string name="alamat">Alamat</string>
    <string name="history_donate">History Donate</string>
    <string name="volunteer_event">Volunteer Event</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="let_s_together_realize_a_cleaner_and_healthier_environment_for_future_generations">Let\'s Together Realize a Cleaner and Healthier Environment for Future Generations</string>
    <string name="back">Back</string>
    <string name="image">Image</string>
    <string name="add">Add +</string>
    <string name="title">Title</string>
    <string name="tipe_lokasi">Tipe Lokasi</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="yy_mm_dd">YY-MM-DD</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="hh_mm">HH:MM</string>
    <string name="how_many_donations_you_want_to_achieve">How many donations you want to achieve?</string>
    <string name="rp_10_000_000">Rp 10.000.000</string>
    <string name="how_many_volunteer_you_want">How many volunteer you want?</string>
    <string name="_200">200</string>
    <string name="kendala">Kendala</string>
    <string name="jumlah_volunteer">Jumlah Volunteer</string>
    <string name="membersihkan_pantai_selatan">Membersihkan pantai selatan</string>
    <string name="_15_jun_2024">15 Jun 2024</string>
    <string name="_16_jun_2024">16 Jun 2024</string>
    <string name="bantul_yogyakarta">Bantul, Yogyakarta</string>
    <string name="add_report">Add report</string>
    <string name="username_capstonegoat">Username : capstonegoat</string>
    <string name="rp_200000">Rp 200000</string>
    <string name="cancel_join">Cancel Join</string>
    <string name="join_volunteer">Join Volunteer</string>
    <string name="my_event">My Event</string>
</resources>