<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/iv_payment_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/detailDesc"
        android:src="@drawable/iv_dana" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dompet_digital"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_payment_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/rb_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>