<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="320dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginSignIn"
        android:fontFamily="@font/poppins_bold"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <TextView
        android:id="@+id/tv_descSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/loginTitleWelcome"
        android:textColor="@color/textGreyColor"
        app:layout_constraintStart_toStartOf="@+id/tv_signin"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_descSignin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmailorUsername"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/formEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/visibility_icon"
            android:drawableTint="@color/black"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize"
            tools:targetApi="m" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/loginSignIn"
        android:textSize="16sp"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/formPassword"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/layoutBreak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <View
            android:id="@+id/dividerLeft"
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/loginButtonGoogle"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/or"
            android:fontFamily="@font/poppins_medium"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/dividerRight"
            app:layout_constraintStart_toEndOf="@+id/dividerLeft"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <View
            android:id="@+id/dividerRight"
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginButtonGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_stroke"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/layoutBreak">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:contentDescription="@string/google_logo_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/loginButtonGoogle"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/poppins"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>