<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerticalLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerticalRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:fontFamily="@font/poppins_bold"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

            <TextView
                android:id="@+id/tv_descSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/let_s_together_realize_a_cleaner_and_healthier_environment_for_future_generations"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/textGreyColor"
                app:layout_constraintTop_toBottomOf="@id/tv_signup"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/tv_descSignup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTglLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formNomorRekening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formTanggalLahir">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNoRekening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_rekening"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formNamaBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formNomorRekening">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNamaBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_bank"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formNamaBank">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/visibility_icon"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/visibility_icon"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sign_up"
                android:background="@drawable/custom_button"
                app:backgroundTint="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/formConfirmPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/registerButton"
                app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_now"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
